--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             Twi translator is a machine translation app that generates translations of
             never-before-seen real-world input sentences from English to Twi. I implemented the model from scratch by training a 
             sequence-to-sequence transformer in Python
-              <p><a class="link"href="https://github.com/samadon1/English-to-Twi-Translator" target="_blank" >View source</a></p> 
+              <p><a class="link"href="https://github.com/samadon1/English-to-Twi-Translator" target="_blank" >  View source</a></p> 
           </p>
         </div>
         <div class="card">
@@ -122,14 +122,23 @@
               <p><a class="link"href="https://github.com/samadon1/locallibrary" target="_blank" >View source</a></p> 
           </p>
         </div>
+       
         
         <div class="card">
           <img class="thumb" src="assets/images/sensor.png" alt="">
           <h3>Digital Distance Meter</h3>
           <p>
             Digital distance meter is  a non-contact distance measurement app thats uses an ultrasonic sensor to measure the distance of target objects. 
-            The sensor data is sent over a realtime database which is then accessed abd displayed by the app
+            The sensor data is sent over a realtime database which is then accessed and displayed by the app
               <p><a class="link"href="https://github.com/samadon1/Digital-distance-meter" target="_blank" >View source</a></p> 
+          </p>
+        </div>
+        <div class="card">
+          <img class="thumb" src="assets/images/astrogal.png" alt="">
+          <h3>AstroGallery</h3>
+          <p>
+          AstroGallery is a website that lets you search for images of galaxies and stars.
+              <p><a class="link"href="https://github.com/samadon1/AstroGallery" target="_blank" > View source</a> <a  class="link" href="https://astrogallery.netlify.app/" target="_blank" > &nbsp Visit site</a> </p> 
           </p>
         </div>
         <br>
