--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
                         </div>
                     </div>
 
+                    <br>
+
+                    <div class="news-item">
+                        <div>Nov <br> 2021</div>
+                        <div>
+                            🏆 I won first prize and first place in the Ai4G (AI for Good) workshop organized by Technical University of Munich and KNUST.
+                        </div>
+                    </div>
+
+                    <br>
+
                 </div>
 
                 <div id="Projects" class="tabcontent ">
