--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                         <div>
                             <h3>
-                                Healthcare acccessibility Map App
+                                Nonprofit Finder
                             </h3>
                             <img class="project-images" src="images/guidestarimg.png" alt="">
                             <p>
