--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 give donors/individuals conducting due diligence on a non-profit organization a way to
                                 do so seamlessly on the platform
                             </p>
-                            <a href="https://calvinsamueldonkor.users.earthengine.app/view/healthcareaccessibility"><button
+                            <a href=""><button
                                     class="btn"> View source</button></a>
 
                             <hr>
